# tsp-benchmark

./: .gitignore  data.db  db.py  pyproject.toml  qaoa_run.py  qiskit_key.py  requirements.txt  test.ipynb  vqe_run.py
graphs/: graph_5_0.gexf  graph_5_1.gexf  graph_5_2.gexf  graph_5_3.gexf  graph_5_4.gexf  graph_5_5.gexf  graph_5_6.gexf  graph_5_7.gexf  graph_5_8.gexf  graph_5_9.gexf
notebooks/: Analise.ipynb  analysis.ipynb  tsp_example.ipynb
sql/: create_tables.sql
utils/: graph.py  model.py  parameters.py  utils.py
