[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["REIS0 <aoreis@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
qiskit-aer = "^0.14.2"
qiskit-optimization = "^0.6.1"
qiskit-ibm-runtime = "^0.23"
matplotlib = "^3.9.0"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
